# Matrix2Code

./: .gitignore  CMakeLists.txt  README.md
examples/: cramer_2x2.matrix  cramer_3x3.matrix  scalar.matrix  scale.matrix  test.matrix
examples/errors/: bad_matrix.matrix  dim_mismatch.matrix  type_mismatch.matrix  undeclared.matrix
include/: AST.h  CodeGenerator.h  ErrorHandler.h  IR.h  IRGenerator.h  Lexer.h  Optimizer.h  Parser.h  SemanticAnalyzer.h  SymbolTable.h
src/: AST.cpp  CodeGenerator.cpp  IR.cpp  IRGenerator.cpp  Lexer.cpp  Optimizer.cpp  Parser.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp  main.cpp
tests/: test_integration.cpp  test_lexer.cpp  test_optimizer.cpp  test_parser.cpp  test_semantic.cpp
